<resources>
    <string name="app_name">TicketToRide</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm">Confirm</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="start_new_game">Start New Game</string>
    <string name="log_out">Log Out</string>
    <string name="game_creator">GAME CREATOR</string>
    <string name="players">PLAYERS</string>
    <string name="join">JOIN</string>
    <string name="full">FULL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start game</string>
    <string name="back_out">Back out</string>
    <string name="choose_color">CHOOSE A COLOR BELOW</string>
    <string name="players_in_lobby"> PLAYERS IN LOBBY</string>
    <string name="choose">CHOOSE</string>
    <string name="create_game">Create Game</string>
    <string name="leave_game">Leave Game</string>
    <string name="send">SEND</string>
    <string name="someone_is_typing">Someone is typing...</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="style_ticket_to_ride">
[
  {
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#ebe3cd\"
      }
    ]
  },
  {
    \"elementType\": \"labels\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#523735\"
      }
    ]
  },
  {
    \"elementType\": \"labels.text.stroke\",
    \"stylers\": [
      {
        \"color\": \"#f5f1e6\"
      }
    ]
  },
  {
    \"featureType\": \"administrative\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"administrative\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"color\": \"#ffffff\"
      },
      {
        \"visibility\": \"on\"
      },
      {
        \"weight\": 2.5
      }
    ]
  },
  {
    \"featureType\": \"administrative.country\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"visibility\": \"on\"
      }
    ]
  },
  {
    \"featureType\": \"administrative.land_parcel\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"administrative.land_parcel\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"color\": \"#dcd2be\"
      }
    ]
  },
  {
    \"featureType\": \"administrative.land_parcel\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#ae9e90\"
      }
    ]
  },
  {
    \"featureType\": \"administrative.locality\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"visibility\": \"on\"
      }
    ]
  },
  {
    \"featureType\": \"administrative.neighborhood\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"administrative.province\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"visibility\": \"on\"
      }
    ]
  },
  {
    \"featureType\": \"landscape.natural\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#dfd2ae\"
      }
    ]
  },
  {
    \"featureType\": \"landscape.natural.terrain\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
      {
        \"color\": \"#c8b164\"
      },
      {
        \"weight\": 2
      }
    ]
  },
  {
    \"featureType\": \"poi\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"poi\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#dfd2ae\"
      }
    ]
  },
  {
    \"featureType\": \"poi\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#93817c\"
      }
    ]
  },
  {
    \"featureType\": \"poi.park\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
      {
        \"color\": \"#a5b076\"
      }
    ]
  },
  {
    \"featureType\": \"poi.park\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#447530\"
      }
    ]
  },
  {
    \"featureType\": \"road\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"road\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#f5f1e6\"
      }
    ]
  },
  {
    \"featureType\": \"road\",
    \"elementType\": \"labels.icon\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"road.arterial\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#fdfcf8\"
      }
    ]
  },
  {
    \"featureType\": \"road.highway\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#f8c967\"
      }
    ]
  },
  {
    \"featureType\": \"road.highway\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"color\": \"#e9bc62\"
      }
    ]
  },
  {
    \"featureType\": \"road.highway.controlled_access\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#e98d58\"
      }
    ]
  },
  {
    \"featureType\": \"road.highway.controlled_access\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
      {
        \"color\": \"#db8555\"
      }
    ]
  },
  {
    \"featureType\": \"road.local\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#806b63\"
      }
    ]
  },
  {
    \"featureType\": \"transit\",
    \"stylers\": [
      {
        \"visibility\": \"off\"
      }
    ]
  },
  {
    \"featureType\": \"transit.line\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#dfd2ae\"
      }
    ]
  },
  {
    \"featureType\": \"transit.line\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#8f7d77\"
      }
    ]
  },
  {
    \"featureType\": \"transit.line\",
    \"elementType\": \"labels.text.stroke\",
    \"stylers\": [
      {
        \"color\": \"#ebe3cd\"
      }
    ]
  },
  {
    \"featureType\": \"transit.station\",
    \"elementType\": \"geometry\",
    \"stylers\": [
      {
        \"color\": \"#dfd2ae\"
      }
    ]
  },
  {
    \"featureType\": \"water\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
      {
        \"color\": \"#b9d3c2\"
      }
    ]
  },
  {
    \"featureType\": \"water\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
      {
        \"color\": \"#92998d\"
      }
    ]
  }
]
  </string>
    <string name="style_json">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
  </string>
    <string name="autoplay">Autoplay</string>
    <string name="claim_route">Claim Route</string>
    <string name="player">Player</string>
    <string name="draw_cards">Draw cards</string>
    <string name="up_carat">^</string>
    <string name="x_0">x 0</string>
    <string name="x_45">x 45</string>
    <string name="default_route_text">Salt Lake City to Salt Lake City</string>
    <string name="canvas_placeholder">***To be filled with a Canvas drawable that draws cities and lines***</string>
    <string name="points">Points</string>
    <string name="trains">Train Cards</string>
    <string name="cards">Cards</string>
    <string name="victory_rank">#1</string>
    <string name="victory_name">PlayerName</string>
    <string name="victory_routes">+ Points Earned:</string>
    <string name="victory_destinations">+ Completed Dest Card Points</string>
    <string name="victory_destinations_failed">+ Deductions: </string>
    <string name="victory_longest_route">+ Longest Route: 10 with </string>
    <string name="victory_total">= Total:</string>
</resources>