<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/player_victory_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/victory_card_rank"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/dense"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/victory_rank"/>

        <TextView
            android:id="@+id/victory_card_name"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:fontFamily="@font/dense"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:background="@drawable/tabs_teal"
            android:textAlignment="center"
            android:text="@string/victory_name"/>
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="30dp"
            android:fontFamily="@font/dense"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:text="Point breakdown"/>
        <TextView

            android:id="@+id/victory_card_routes"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:fontFamily="@font/dense"
            android:textColor="@color/black_overlay"
            android:textSize="15sp"
            android:text="@string/victory_routes"/>
        <TextView

            android:id="@+id/victory_card_destinations"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:fontFamily="@font/dense"
            android:textColor="@color/black_overlay"
            android:textSize="15sp"
            android:text="@string/victory_destinations"/>
    <TextView

        android:id="@+id/victory_card_destinations_failed"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/dense"
        android:textColor="@color/black_overlay"
        android:textSize="15sp"
        android:text="@string/victory_destinations_failed"/>
    <TextView

        android:id="@+id/victory_card_longest_route"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/dense"
        android:textColor="@color/black_overlay"
        android:textSize="15sp"
        android:text="@string/victory_longest_route"/>
    <TextView


        android:id="@+id/victory_card_total"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/dense"
        android:textColor="@color/black_overlay"
        android:textSize="15sp"
        android:text="@string/victory_total"/>
</LinearLayout>