<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="e.mboyd6.tickettoride.UI.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/lobby_fragment_back_button"

        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_red_bg"
        android:drawableEnd="@drawable/back_arrow"
        android:fontFamily="@font/dense"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/log_out"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_fragment_back_button"

        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_green_bg"
        android:drawableEnd="@drawable/plus"
        android:fontFamily="@font/dense"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/start_new_game"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_at_the_top"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="#434343"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dense"
        android:text="@string/game_creator"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/textView2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/rectangle_at_the_top"
        app:layout_constraintTop_toBottomOf="@+id/lobby_fragment_back_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dense"
        android:text="@string/players"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_at_the_top"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toRightOf="@+id/rectangle_at_the_top"
        app:layout_constraintTop_tTopOf="@+id/lobby_fragment_back_button"
        app:layout_constraintTop_toBottomOf="@+id/register_fragment_back_button" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
